--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,12 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
     implementation('com.journeyapps:zxing-android-embedded:4.3.0') { transitive = false }
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.github.yuriy-budiyev:code-scanner:2.1.1'
     implementation'com.balysv:material-ripple:1.0.2'
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
+    implementation 'com.github.leoncydsilva:MaterialSearchView:1.0.0'
+    implementation 'com.github.gcacace:signature-pad:1.3.1'
+    implementation 'com.airbnb.android:lottie:3.0.7'
 }
