--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.CAMERA2" />
 
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -19,6 +21,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GearApp">
+        <activity
+            android:name=".Activity.DetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.OrderInfoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.DilverconfirmActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.SignatureActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.ProofOfDeliveryActivity"
+            android:exported="false" />
         <activity
             android:name=".Activity.ScannerActivity"
             android:exported="false" />
