--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,9 +46,15 @@ dependencies {
     implementation('com.journeyapps:zxing-android-embedded:4.3.0') { transitive = false }
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.github.yuriy-budiyev:code-scanner:2.1.1'
-    implementation'com.balysv:material-ripple:1.0.2'
+    implementation 'com.balysv:material-ripple:1.0.2'
     implementation 'com.github.dhaval2404:imagepicker:2.1'
     implementation 'com.github.leoncydsilva:MaterialSearchView:1.0.0'
-    implementation 'com.github.gcacace:signature-pad:1.3.1'
-    implementation 'com.airbnb.android:lottie:3.0.7'
+    implementation 'com.airbnb.android:lottie:3.7.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
+    implementation 'com.github.JusCezari:android-signaturepad:v1.2.0'
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.24'
+
+
 }
